<resources>
    <string name="app_name">Seven</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Model">Model</string>
    <string name="Price">Price</string>
    <string name="Luxuries">Luxuries</string>
    <string name="Floor">Floor</string>
    <string name="The_number_of_rooms">The number of rooms</string>
    <string name="The_space">The space</string>
    <string name="Engine_Capacity">Engine Capacity</string>
    <string name="Mileage">Mileage</string>
    <string name="Model_year">Model year</string>
    <string name="Ad_title">Ad title</string>
    <string name="Ad_description">Ad description</string>
    <string name="Targeting_areas">Targeting areas</string>
    <string name="Add_an_Ad">Add an Ad</string>
    <string name="Enter_the_email">Enter the email</string>
    <string name="Email">Email :</string>
    <string name="Entry">Entry</string>
    <string name="Vehicle_type">Vehicle type</string>
    <string name="Property_type">Property type</string>
    <string name="furniture">furniture</string>
    <string name="Comments">Comments</string>
    <string name="Add_Comment">Add Comment</string>
    <string name="Send_Message">Send Message</string>
    <string name="Suggestions">Suggestions</string>
    <string name="Member_Login">Member Login</string>
    <string name="Login_users">Login users</string>
    <string name="Password">Password :</string>
    <string name="Forgot_your_password">Forgot your password</string>
    <string name="Login">Login</string>
    <string name="Title">Title</string>
    <string name="New_registration">New registration</string>
    <string name="Register_a_new_member">Register a new member</string>
    <string name="Full_name">Full name</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Reply_to_the_ad">Reply to the ad</string>
    <string name="Write_comment">Write comment</string>
    <string name="Category">Category</string>
    <string name="Add_a_photo_or_video">Add a photo or video</string>
    <string name="Confirm_registration">Confirm registration</string>
    <string name="Write_code_number">Write code number</string>
    <string name="The_message_has_not_arrived">The message has not arrived</string>
    <string name="Ad_update">Ad update</string>
    <string name="Mobile_number">Mobile number :</string>
    <string name="Address">Address</string>
    <string name="Details">Details</string>
    <string name="About_Seven">About Seven</string>
    <string name="Messages">Messages</string>
    <string name="Notifications">Notifications</string>
    <string name="Policy_and_terms">Policy and Terms</string>
    <string name="Source_country">Source country</string>
    <string name="Log_out">Log out</string>
    <string name="All_ads">All ads</string>
    <string name="Expired_ads">Expired ads</string>
    <string name="Name">Name :</string>
    <string name="City">City :</string>
    <string name="Country">Country :</string>
    <string name="Save_edits">Save edits</string>
    <string name="Edit_profile">Edit profile</string>
    <string name="My_account">My account</string>
    <string name="Settings">Settings</string>
    <string name="Search_term">Search term</string>
    <string name="Answer">Answer</string>
    <string name="Delete">Delete</string>
    <string name="Update">Update</string>
    <string name="Modification">Modification</string>
    <string name="Language">Language</string>
    <string name="Arabic">Arabic</string>
    <string name="English">English</string>
    <string name="Turkey">Turkey</string>
    <string name="More">More</string>
    <string name="Search">Search</string>
    <string name="New_add">New add</string>
    <string name="Profile">Profile</string>
    <string name="Home">Home</string>
    <string name="cars">Cars</string>
    <string name="departments">Departments</string>
</resources>
