<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.LanguageActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Arabic"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/btn_ar"
        android:textSize="22sp"
        android:padding="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/English"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/btn_en"
        android:textSize="22sp"
        android:padding="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Turkey"
        android:id="@+id/btn_tr"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22sp"
        android:padding="16dp"/>
</LinearLayout>