<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.ForgetPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:id="@+id/text"
        android:text="@string/Enter_the_email"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:hint="@string/Email"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:gravity="start"
        android:padding="5dp"
        android:textSize="18sp"
        android:background="@drawable/accountedittext"/>

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:background="@drawable/bluebutton"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/Entry"
        android:textColor="#fff"
        android:textSize="18sp"/>
</LinearLayout>