<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="1000dp"
    android:minHeight="400dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/orange_new"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/quit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Ad_update"
            android:textColor="#FFF"
            android:textSize="20sp" />


    </RelativeLayout>

    <EditText
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_empty"
        android:hint="@string/Mobile_number"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_empty"
        android:hint="@string/Address"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_empty"
        android:hint="@string/Details"
        android:inputType="text"
        android:padding="10dp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/orange_new"
        android:text="@string/Ad_update"
        android:textColor="#FFF"
        android:textStyle="bold" />


</LinearLayout>