<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.SettingsFragment">


    <LinearLayout
        android:id="@+id/notabslayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userimage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/user" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/orange_new"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="24sp"
            android:layout_marginEnd="24sp"
            android:background="@color/orange"
            android:gravity="center"
            android:text="@string/Edit_profile"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/Name"
                android:textColor="@color/orange_new"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/accountedittext"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_userName"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/accountedittext"
                    android:gravity="center_vertical"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/Mobile_number"
                android:textColor="@color/orange_new"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/accountedittext">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/accountedittext"
                    android:gravity="center_vertical"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/useremailedit"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/accountedittext"
                android:gravity="right|center"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="mohamed"
                android:textDirection="ltr"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp"
                android:text="البريد الالكتروني :"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/Password"
                android:textColor="@color/orange_new"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/accountedittext">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/accountedittext"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/City"
                android:textColor="@color/orange_new"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/accountedittext">

                <EditText
                    android:id="@+id/et_city"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/accountedittext"
                    android:gravity="center_vertical"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/btn_save"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/orange"
            android:text="@string/Save_edits"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </LinearLayout>


</FrameLayout>